# truncated-rank-aggregation

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tra/: __init__.py  api.py  statistic.py
src/tra/backends/: exact_dp.py
tests/: test_exact_dp.py  test_smoke.py  test_statistic.py
