[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "truncated-rank-aggregation"
version = "0.1.0"
description = "Python implementation of Truncated Rank Aggregation (TRA) with exact finite-sample and asymptotic null distributions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Richard W. Doty"}
]
license = { file = "LICENSE" }
dependencies = [
    "numpy",
]

[project.optional-dependencies]
numba = ["numba"]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88